--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 PORT=8080
 API_LINK="https://api.rawg.io/api/games?key="
 API_KEY="fc08efb9fe5a43bf890da52536087366"
+API_SEARCH='&search='
 
 
-ATLAS_URI='mongodb+srv://<username>:<password>@cluster0.saqhizj.mongodb.net/'
+ATLAS_URI='mongodb+srv://bryant:11235813@cluster0.saqhizj.mongodb.net/'
 ATLAS_USER='bryant'
 ATLAS_PASSWORD='11235813'
+
